src/wrf/slurm_outputs/combined_dT_profile_v1.txt
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/combined_dT_profile_figsrc.py", line 130
    dT_wrf_polluted, z_wrf_polluted, \ 
                                      ^
SyntaxError: unexpected character after line continuation character
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/combined_dT_profile_figsrc.py", line 138
    ax.plot(dT_wrf_unpolluted, z_wrf_unpolluted, color=colors_dict['unpoll'], \
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/combined_dT_profile_figsrc.py", line 12, in <module>
    from wrf.ss_calculations import get_lwc, get_ss_pred, linregress
ModuleNotFoundError: No module named 'wrf.ss_calculations'
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/combined_dT_profile_figsrc.py", line 213, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/combined_dT_profile_figsrc.py", line 44, in main
    allow_pickle=True).item()
  File "/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/numpy/lib/npyio.py", line 428, in load
    fid = open(os_fspath(file), "rb")
FileNotFoundError: [Errno 2] No such file or directory: '/global/home/users/kalatimer/proj/20supersat/data/revhalo/dT_profile_data_alldates.npy'
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/combined_dT_profile_figsrc.py", line 213, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/combined_dT_profile_figsrc.py", line 66, in main
    pres = case_filtered_data_dict['pres']
KeyError: 'pres'
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(6750455,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
(5240966,)
halo
2.332481977000056
caipeex
0.15561464488687649
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/combined_dT_profile_figsrc.py", line 213, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/combined_dT_profile_figsrc.py", line 85, in main
    dT_and_z_dict['Unpolluted']['z_bins'], 'unpolluted')
KeyError: 'z_bins'
